Added new styles...

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>DonutSquad</title>
     <link
+      id="favicon"
+      rel="icon"
+      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-196x196.png"
+      type="image/x-icon"
+    />
+    <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
       href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-57x57.png"
@@ -113,15 +119,76 @@
       />
     </center>
     <center>
-      <h1>Hi there!</h1>
-      <p><b>Welcome to the offical @DonutSquad website.</b><br /></p>
-      <footer>
-        Join us on <a href="https://discord.gg/5buZTCt">Discord</a> <br />
-        Email us at
-        <a href="mailto:officaldonutsquad@gmail.com"
-          >officaldonutsquad@gmail.com</a
-        >
-      </footer>
+      <h1>DonutSquad</h1>
+
+      <p id="about">
+        A group of teens who make web apps, Glitch projects and userscripts, for
+        users and developers alike.
+      </p>
     </center>
+
+    <br /><br /><br />
+
+    <div class="impressive-square" id="div">
+      <div class="impressive-body">
+        <h2>
+          Members
+        </h2>
+        <p>
+          Know all the members of the DonutSquad team.
+        </p>
+        <center>
+          <a href="members.html"
+            ><svg
+              viewBox="0 0 24 24"
+              preserveAspectzratio="xMidYMid meet"
+              focusable="false"
+              style="pointer-events: none; display: block; width: 30px; height: 30px;color:#fff;"
+            >
+              <g>
+                <path
+                  d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
+                ></path>
+              </g></svg
+          ></a>
+        </center>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="impressive-square" id="div2">
+      <div class="impressive-body">
+        <h2>
+          Projects
+        </h2>
+        <p>
+          See all the projects and repositories by DonutSquad.
+        </p>
+        <center>
+          <a href="https://glitch.com/@donutsquad" target="_blank"
+            ><img
+              src="https://cdn.glitch.com/e200ca48-8caa-472f-b105-1ab0ed3d605d%2Fglitch-fish-big.png"
+              width="50px"
+          /></a>
+          &nbsp;&nbsp;
+          <a href="https://github.com/DonutSquad" target="_blank"
+            ><img
+              src="https://cdn.glitch.com/b2f03a5f-edac-4c67-87ab-3d2e27db6053%2FGitHub-Mark-120px-plus.png?v=1577265116702"
+              height="50px"
+          /></a>
+        </center>
+      </div>
+    </div>
+
+    <br /><br /><br />
+
+    <footer>
+      Join us on <a href="https://discord.gg/5buZTCt">Discord</a> <br />
+      Email us at
+      <a href="mailto:officaldonutsquad@gmail.com"
+        >officaldonutsquad@gmail.com</a
+      >
+    </footer>
   </body>
 </html>
