Change CDN from Gofile to Glitch

--- a/index.html
+++ b/index.html
@@ -5,100 +5,100 @@
     <link
       id="favicon"
       rel="icon"
-      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-196x196.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Ffavicon-196x196.png"
       type="image/x-icon"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-57x57.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="114x114"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-114x114.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="72x72"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-72x72.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="144x144"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-144x144.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="60x60"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-60x60.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="120x120"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-120x120.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="76x76"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-76x76.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="152x152"
-      href="https://srv-file5.gofile.io/download/VXqn9N/apple-touch-icon-152x152.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fapple-touch-icon-152x152.png"
     />
     <link
       rel="icon"
       type="image/png"
-      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-196x196.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Ffavicon-196x196.png"
       sizes="196x196"
     />
     <link
       rel="icon"
       type="image/png"
-      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-96x96.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Ffavicon-96x96.png"
       sizes="96x96"
     />
     <link
       rel="icon"
       type="image/png"
-      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-32x32.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Ffavicon-32x32.png"
       sizes="32x32"
     />
     <link
       rel="icon"
       type="image/png"
-      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-16x16.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Ffavicon-16x16.png"
       sizes="16x16"
     />
     <link
       rel="icon"
       type="image/png"
-      href="https://srv-file5.gofile.io/download/VXqn9N/favicon-128.png"
+      href="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Ffavicon-128.png"
       sizes="128x128"
     />
     <meta name="application-name" content="DonutSquad" />
     <meta name="msapplication-TileColor" content="#160f19" />
     <meta
       name="msapplication-TileImage"
-      content="https://srv-file5.gofile.io/download/VXqn9N/mstile-144x144.png"
+      content="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fmstile-144x144.png"
     />
     <meta
       name="msapplication-square70x70logo"
-      content="https://srv-file5.gofile.io/download/VXqn9N/mstile-70x70.png"
+      content="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fmstile-70x70.png"
     />
     <meta
       name="msapplication-square150x150logo"
-      content="https://srv-file5.gofile.io/download/VXqn9N/mstile-150x150.png"
+      content="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fmstile-150x150.png"
     />
     <meta
       name="msapplication-wide310x150logo"
-      content="https://srv-file5.gofile.io/download/VXqn9N/mstile-310x150.png"
+      content="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fmstile-310x150.png"
     />
     <meta
       name="msapplication-square310x310logo"
-      content="https://srv-file5.gofile.io/download/VXqn9N/mstile-310x310.png"
+      content="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fmstile-310x310.png"
     />
 
     <meta charset="utf-8" />
