Change CDN from Gofile to Glitch #2 I realized that the on-screen logo was still loading from Gofile instead of Glitch

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <body>
     <center>
       <img
-        src="https://srv-file10.gofile.io/download/H4UFfh/huge%20~%201080x1080.png"
+        src="https://cdn.glitch.com/00025c2e-0ae3-4a9e-b15f-f54a47a43aa6%2Fhuge%20~%201080x1080.png"
         alt="DonutSquad Logo"
       />
     </center>
