--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           Know all the members of the DonutSquad team.
         </p>
         <center>
-          <a href="members.html"
+          <a href="/members.html"
             ><svg
               viewBox="0 0 24 24"
               preserveAspectzratio="xMidYMid meet"
