Bottom link change
It now opens in a new tab.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <br /><br /><br />
 
     <footer>
-      Join us on <a href="https://discord.gg/5buZTCt">Discord</a> <br />
+      Join us on <a href="https://discord.gg/5buZTCt" target="_blank">Discord</a> <br />
       Email us at
       <a href="mailto:officaldonutsquad@gmail.com"
         >officaldonutsquad@gmail.com</a
